--- a/config/storage.yml
+++ b/config/storage.yml
@@ -7,12 +7,12 @@ local:
   root: <%= Rails.root.join("storage") %>
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-# amazon:
-#   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
-#   bucket: your_own_bucket
+amazon:
+  service: S3
+  access_key_id: AKIAY6H7HGH2EIDUUGVE
+  secret_access_key: zM92iwEGsQ3VHIRfYQ81FbeJ/xYwwWc8peNkDXAZ
+  region: us-east-1
+  bucket: songs-test
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
